syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";
import "default.proto";

message MultiSig {
    uint32 quorum = 1;
    repeated PublicKey validators = 2;
    message SignatureByValidator {
        PublicKey key = 1;
        Signature value = 2;
    }
    repeated SignatureByValidator signatures = 3;
}